add new setting page

--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
 <div class="setting">
     <div style="font-size: 20px; padding-top: 10px; padding-left: 15px; user-select: none">
         <span>设置</span>
-        <a id="more-setting" class="a-link" href="notifySetting.html" target="_blank">
+        <a id="more-setting" class="a-link" href="setting.html" target="_blank">
             <span>更多设置</span>
             <span style="position: relative; top: 4px;">
                 <svg width="10" height="10" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" class="right-arrow" style="transform: rotate(90deg);"><rect x="10" y="10" rx="5" ry="5" width="35" height="10" style="transform: rotate(45deg); transform-origin: center;"/><rect x="10" y="30" rx="5" ry="5" width="35" height="10" style="transform: rotate(135deg); transform-origin: center;"/></svg>
@@ -266,8 +266,8 @@
             </section>
         </div>
         <div class="button-host" id="btn8">
-            <span class="tooltip">更新通知
-                <span class="tooltiptext tooltiptext-left">开启后在关注的up主发布新视频时推送通知。</span>
+            <span class="tooltip">投稿通知
+                <span class="tooltiptext tooltiptext-left">开启后在关注的up主发布新投稿时推送通知。</span>
             </span>
             <section class="button">
                 <div class="checkbox">
@@ -292,7 +292,7 @@
         </div>
         <div class="button-host" id="btn18">
             <span class="tooltip">番剧投稿
-                <span class="tooltiptext tooltiptext-right tooltiptext-top">开启后在关注的up主发布新视频时推送通知。</span>
+                <span class="tooltiptext tooltiptext-right tooltiptext-top">开启后在关注的番剧发布新视频时推送通知。</span>
             </span>
             <section class="button">
                 <div class="checkbox">
@@ -303,7 +303,7 @@
         </div>
         <div class="button-host" id="btn19">
             <span class="tooltip">专栏投稿
-                <span class="tooltiptext tooltiptext-left tooltiptext-top">开启后在关注的up主发布新视频时推送通知。</span>
+                <span class="tooltiptext tooltiptext-left tooltiptext-top">开启后在关注的up主发布新专栏时推送通知。</span>
             </span>
             <section class="button">
                 <div class="checkbox">
