--- a/readme.html
+++ b/readme.html
@@ -14,7 +14,7 @@
         <img src="./images/svga/13.svg" frame="13" height="100%" width="100%">
     </div>
     <div id="rua-nav">
-        <a href="notifySetting.html">通知设置</a>
+        <a href="setting.html">偏好设置</a>
         <a goto="MV3">Manifest V3</a>
         <a goto="new-features">新特性</a>
         <a goto="functions">已有的功能</a>
@@ -26,13 +26,15 @@
     <h1>b站助手rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.16来啦 <br>
+        rua豹器5.17来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
-    <h3 style="font-size: 28px" id="new-features">ver 5.16 特性：</h3>
+    <h3 style="font-size: 28px" id="new-features">ver 5.17 特性：</h3>
     <ul>
-        <li>修复了放映室取流权限不足的问题。</li>
+        <li>加入了自定义打卡词。</li>
+        <li>添加了新版动态页面的深色模式支持。</li>
+        <li>修复了弹幕emoji的发送问题。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
@@ -54,7 +56,7 @@
         <li>音乐播放器页面下载。</li>
         <li>深色模式。</li>
         <li>评论区up表情包。</li>
-        <li>放映室</li>
+        <li>放映室（不一定支持舰限，没试过）</li>
         <li>挂机经验</li>
     </ul>
     <h2 id="MV3">Manifest V3</h2>
