improved live room

--- a/liveroom.html
+++ b/liveroom.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <main>
+    <div class="control-bar-bg"></div>
     <div class="control-bar">
         <div style="display: flex">
             <div class="setting control-panel">
