--- a/readme.html
+++ b/readme.html
@@ -35,6 +35,7 @@
         <li>加入了自定义打卡词。</li>
         <li>添加了新版动态页面的深色模式支持。</li>
         <li>修复了弹幕emoji的发送问题。</li>
+        <li>一些其他改进。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
