replace flac container

--- a/readme.html
+++ b/readme.html
@@ -30,12 +30,11 @@
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
-    <h3 style="font-size: 28px" id="new-features">ver 5.17 特性：</h3>
+    <h3 style="font-size: 28px" id="new-features">ver 5.18 特性：</h3>
     <ul>
-        <li>加入了自定义打卡词。</li>
-        <li>添加了新版动态页面的深色模式支持。</li>
-        <li>修复了弹幕emoji的发送问题。</li>
-        <li>一些其他改进。</li>
+        <li>直播间加入了追帧的功能。</li>
+        <li>直播间悬浮窗改版了，适配了新版的弹幕表情。</li>
+        <li>Hi-Res现以m4a格式保存</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
@@ -201,6 +200,13 @@
 
     <br/>
     <h2 id="version">版本记录</h2>
+    <h3>ver 5.17</h3>
+    <ul>
+        <li>加入了自定义打卡词。</li>
+        <li>添加了新版动态页面的深色模式支持。</li>
+        <li>修复了弹幕emoji的发送问题。</li>
+        <li>一些其他改进。</li>
+    </ul>
     <h3>ver 5.16</h3>
     <ul>
         <li>修复了放映室取流权限不足的问题。</li>
