--- a/readme.html
+++ b/readme.html
@@ -32,6 +32,7 @@
     </p>
     <h3 style="font-size: 28px" id="new-features">ver 5.18 特性：</h3>
     <ul>
+        <li>现在可以隐藏视频中的"关注"、"投票"等功能</li>
         <li>直播间加入了追帧的功能。</li>
         <li>直播间悬浮窗改版了，适配了新版的弹幕表情。</li>
         <li>Hi-Res现以m4a格式保存</li>
