--- a/setting.html
+++ b/setting.html
@@ -281,6 +281,26 @@
                     </div>
                 </div>
             </div>
+            <div class="setting-sub-group-item">
+                <div class="item-left-side">
+                    <div class="setting-item-text">
+                        <div class="setting-item-name">隐藏互动按钮</div>
+                        <div class="setting-item-description">隐藏视频上方的关注、投票等按钮</div>
+                    </div>
+                </div>
+                <div class="item-right-side">
+                    <div class="setting-item-switch">
+                        <div class="button-host">
+                            <section class="button">
+                                <div class="checkbox">
+                                    <input id="setting-item-switch-hidden-video-btn" type="checkbox">
+                                    <label></label>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="setting-sub-group-title">主题</div>
             <div class="setting-sub-group-item">
                 <div class="item-left-side">
