--- a/readme.html
+++ b/readme.html
@@ -26,16 +26,18 @@
     <h1>b站助手rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.17来啦 <br>
+        rua豹器5.18来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
     <h3 style="font-size: 28px" id="new-features">ver 5.18 特性：</h3>
     <ul>
-        <li>现在可以隐藏视频中的"关注"、"投票"等功能</li>
+        <li>现在可以隐藏视频中的"关注"、"投票"等功能。</li>
         <li>直播间加入了追帧的功能。</li>
         <li>直播间悬浮窗改版了，适配了新版的弹幕表情。</li>
-        <li>Hi-Res现以m4a格式保存</li>
+        <li>Hi-Res现以m4a格式保存。</li>
+        <li>改进了设置页。</li>
+        <li>加入了虚拟主播所属公会显示（数据来源见下方）。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
@@ -201,6 +203,16 @@
 
     <br/>
     <h2 id="version">版本记录</h2>
+    <h3>ver 5.18</h3>
+    <ul>
+        <li>现在可以隐藏视频中的"关注"、"投票"等功能</li>
+        <li>直播间加入了追帧的功能。</li>
+        <li>直播间悬浮窗改版了，适配了新版的弹幕表情。</li>
+        <li>Hi-Res现以m4a格式保存。</li>
+        <li>设置页增加了关注列表的搜索功能。</li>
+        <li>加入了通知的总开关。</li>
+        <li>加入了虚拟主播所属公会显示（数据来源见下方）。</li>
+    </ul>
     <h3>ver 5.17</h3>
     <ul>
         <li>加入了自定义打卡词。</li>
@@ -409,6 +421,10 @@
         <li>mpegts.js <a href="https://github.com/xqq/mpegts.js" target="_blank">github.com/xqq/mpegts.js</a></li>
         <li>Copyright (c) mpegts.js developers and contributors</li>
         <li>License: <a href="https://github.com/xqq/mpegts.js/blob/master/LICENSE" target="_blank">github.com/xqq/mpegts.js/blob/master/LICENSE</a></li>
+    </ul>
+    <h3>MCN数据来源</h3>
+    <ul>
+        <li>https://github.com/tiebarandomuser/vtuberguildqueue</li>
     </ul>
 </div>
 <div id="bottom">
