--- a/setting.html
+++ b/setting.html
@@ -347,6 +347,26 @@
                 <div class="item-left-side">
                     <div class="setting-item-text">
                         <div class="setting-item-name">消息推送</div>
+                        <div class="setting-item-description">关闭后你将不会再收到任何通知。</div>
+                    </div>
+                </div>
+                <div class="item-right-side">
+                    <div class="setting-item-switch">
+                        <div class="button-host">
+                            <section class="button">
+                                <div class="checkbox">
+                                    <input id="setting-item-switch-notification-master" type="checkbox">
+                                    <label></label>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="setting-sub-group-item">
+                <div class="item-left-side">
+                    <div class="setting-item-text">
+                        <div class="setting-item-name">消息推送</div>
                         <div class="setting-item-description">开启后在收到回复、赞、@、系统消息、私信时会推送通知。</div>
                     </div>
                 </div>
@@ -460,7 +480,10 @@
                     </div>
                 </div>
             </div>
-            <div class="setting-sub-group-title" style="margin-top: 30px">up设置</div>
+            <div class="setting-sub-group-title" style="margin-top: 30px; display: flex; justify-content: space-between;">
+                <div>up设置</div>
+                <input id="setting-search-user" type="text" style="width: 50px" placeholder="搜索你的关注列表">
+            </div>
         </div>
     </div>
     <div id="up-setting" class="setting-group">
