liveroom is improved

--- a/liveroom.html
+++ b/liveroom.html
@@ -84,9 +84,9 @@
                         <span>换牌子</span>
                         <span>开启后会在弹幕发送前检查当前携带的牌子并更换<br>为当前直播间的牌子，可能会造成弹幕延迟发送。</span>
                     </div>
-                    <input type="radio" id="setting-medal-switch-off" name="medal-switch" value="off" checked>
+                    <input type="radio" id="setting-medal-switch-off" name="medal-switch" value="off">
                     <label for="setting-medal-switch-off">关</label>
-                    <input type="radio" id="setting-medal-switch-on" name="medal-switch" value="on">
+                    <input type="radio" id="setting-medal-switch-on" name="medal-switch" value="on" checked>
                     <label for="setting-medal-switch-on">开</label>
                     <input type="radio" id="setting-medal-switch-none" name="medal-switch" value="none">
                     <label for="setting-medal-switch-none">不带牌子</label>
