--- a/readme.html
+++ b/readme.html
@@ -38,6 +38,8 @@
         <li>Hi-Res现以m4a格式保存。</li>
         <li>改进了设置页。</li>
         <li>加入了虚拟主播所属公会显示（数据来源见下方）。</li>
+        <li>放映室改版了，加入了视频流统计信息显示。</li>
+        <li>现在主播直接断推流后放映室也可以自动回收直播间了。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
@@ -212,6 +214,8 @@
         <li>设置页增加了关注列表的搜索功能。</li>
         <li>加入了通知的总开关。</li>
         <li>加入了虚拟主播所属公会显示（数据来源见下方）。</li>
+        <li>放映室改版了，加入了视频流统计信息显示。</li>
+        <li>现在主播直接断推流后放映室也可以自动回收直播间了。</li>
     </ul>
     <h3>ver 5.17</h3>
     <ul>
