support new security policy on wear madel and heartbeat

--- a/readme.html
+++ b/readme.html
@@ -26,20 +26,14 @@
     <h1>b站助手rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.18来啦 <br>
+        rua豹器5.19来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
     <h3 style="font-size: 28px" id="new-features">ver 5.18 特性：</h3>
     <ul>
-        <li>现在可以隐藏视频中的"关注"、"投票"等功能。</li>
-        <li>直播间加入了追帧的功能。</li>
-        <li>直播间悬浮窗改版了，适配了新版的弹幕表情。</li>
-        <li>Hi-Res现以m4a格式保存。</li>
-        <li>改进了设置页。</li>
-        <li>加入了虚拟主播所属公会显示（数据来源见下方）。</li>
-        <li>放映室改版了，加入了视频流统计信息显示。</li>
-        <li>现在主播直接断推流后放映室也可以自动回收直播间了。</li>
+        <li>适配了新的直播间外观</li>
+        <li>添加了对API新版安全策略的支持</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
