add support for more pages

--- a/readme.html
+++ b/readme.html
@@ -7,9 +7,10 @@
     <meta name="current-version-mv2" content="5.10.3">
     <title>rua豹器 使用说明</title>
     <link href="./css/readme.min.css" type="text/css" rel="stylesheet">
+    <link href="./css/darkButton.min.css" type="text/css" rel="stylesheet">
 </head>
 <body style="font-size: 100%;">
-<div id="rua-icon-host" style="height: 350px; width: 100%;">
+<div id="rua-icon-host" style="height: 350px; width: 100%;user-select: none">
     <div id="rua-icon" style="width: 350px; height: 350px;">
         <img src="./images/svga/13.svg" frame="13" height="100%" width="100%">
     </div>
@@ -434,6 +435,7 @@
     <div id="bug-reporter"><a href="https://github.com/TyraelDLee/HarukaEmoji/issues">问题反馈</a></div>
 </div>
 <script src="./js/SVGA.min.js"></script>
+<script src="./js/DarkButton.min.js"></script>
 <script src="./js/readme.min.js"></script>
 <!---->
 </body>
