--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
 <body>
 <div class="host">
     <img id="logo" src="./images/svga/13.svg" frame="13">
+    <a href="./danmaku.html" class="danmaku-entry a-link" target="_blank">弹幕姬</a>
     <a href="./liveroom.html" class="liveroom-entry a-link" target="_blank">放映室</a>
 <!--    <img id="logo" src="./images/abaaba.png">-->
     <div style="font-size: 14px">rua豹器</div>
