--- a/readme.html
+++ b/readme.html
@@ -7,7 +7,7 @@
     <meta name="current-version-mv2" content="5.10.3">
     <title>rua豹器 使用说明</title>
     <link href="./css/readme.min.css" type="text/css" rel="stylesheet">
-    <link href="./css/darkButton.min.css" type="text/css" rel="stylesheet">
+<!--    <link href="./css/darkButton.min.css" type="text/css" rel="stylesheet">-->
 </head>
 <body style="font-size: 100%;">
 <div id="rua-icon-host" style="height: 350px; width: 100%;user-select: none">
@@ -31,10 +31,12 @@
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
-    <h3 style="font-size: 28px" id="new-features">ver 5.18 特性：</h3>
+    <h3 style="font-size: 28px" id="new-features">ver 5.19 特性：</h3>
     <ul>
-        <li>适配了新的直播间外观</li>
-        <li>添加了对API新版安全策略的支持</li>
+        <li>放映室界面改进，现在可以一次添加多个直播间了，也可以通过搜索用户名来寻找直播间。</li>
+        <li>添加了放映室对HLS流的支持。</li>
+        <li>适配了新的直播间外观。</li>
+        <li>添加了对API新版安全策略的支持。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
@@ -202,7 +204,7 @@
     <h2 id="version">版本记录</h2>
     <h3>ver 5.18</h3>
     <ul>
-        <li>现在可以隐藏视频中的"关注"、"投票"等功能</li>
+        <li>现在可以隐藏视频中的"关注"、"投票"等功能。</li>
         <li>直播间加入了追帧的功能。</li>
         <li>直播间悬浮窗改版了，适配了新版的弹幕表情。</li>
         <li>Hi-Res现以m4a格式保存。</li>
@@ -397,6 +399,12 @@
     </ul>
 
     <h2>开源组件许可</h2>
+    <h3>Hls.js</h3>
+    <ul>
+        <li>Hls.js <a href="https://github.com/video-dev/hls.js" target="_blank">https://github.com/video-dev/hls.js</a></li>
+        <li>Copyright (c) video-dev and contributors</li>
+        <li>License: <a href="https://github.com/video-dev/hls.js/blob/master/LICENSE" target="_blank">https://github.com/video-dev/hls.js/blob/master/LICENSE</a></li>
+    </ul>
     <h3>FFmpeg.wasm</h3>
     <ul>
         <li>Offical site: <a href="https://ffmpegwasm.netlify.app/" target="_blank">ffmpegwasm.netlify.app</a></li>
@@ -435,7 +443,7 @@
     <div id="bug-reporter"><a href="https://github.com/TyraelDLee/HarukaEmoji/issues">问题反馈</a></div>
 </div>
 <script src="./js/SVGA.min.js"></script>
-<script src="./js/DarkButton.min.js"></script>
+<!--<script src="./js/DarkButton.min.js"></script>-->
 <script src="./js/readme.min.js"></script>
 <!---->
 </body>
