--- a/liveroom.html
+++ b/liveroom.html
@@ -8,6 +8,7 @@
     <link href="./css/liveroom.min.css" type="text/css" rel="stylesheet">
     <link href="./css/popupbtn.min.css" type="text/css" rel="stylesheet">
     <script src="./js/mpegts.min.js"></script>
+    <script src="./hls/hls.min.js"></script>
     <script src="./js/crypto-js.min.js"></script>
 </head>
 <body>
