--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="current-version" content="5.13">
+    <meta name="current-version" content="5.19">
     <meta name="current-version-mv2" content="5.10.3">
     <title>rua豹器 使用说明</title>
     <link href="./css/readme.min.css" type="text/css" rel="stylesheet">
@@ -405,15 +405,21 @@
         <li>Copyright (c) video-dev and contributors</li>
         <li>License: <a href="https://github.com/video-dev/hls.js/blob/master/LICENSE" target="_blank">https://github.com/video-dev/hls.js/blob/master/LICENSE</a></li>
     </ul>
+    <h3>brotli</h3>
+    <ul>
+        <li><a href="https://github.com/google/brotli" target="_blank">GitHub</a></li>
+        <li>Copyright (c) 2009, 2010, 2013-2016 by the Brotli Authors.</li>
+        <li>License: <a href="https://github.com/google/brotli/blob/master/LICENSE" target="_blank">https://github.com/google/brotli/blob/master/LICENSE</a></li>
+    </ul>
     <h3>FFmpeg.wasm</h3>
     <ul>
-        <li>Offical site: <a href="https://ffmpegwasm.netlify.app/" target="_blank">ffmpegwasm.netlify.app</a></li>
+        <li>Official site: <a href="https://ffmpegwasm.netlify.app/" target="_blank">ffmpegwasm.netlify.app</a></li>
         <li>Copyright (c) FFmpeg.wasm developers and contributors</li>
         <li>License: <a href="https://github.com/ffmpegwasm/ffmpeg.wasm-core/blob/n4.3.1-wasm/LICENSE.md" target="_blank">github.com/ffmpegwasm/ffmpeg.wasm-core/blob/n4.3.1-wasm/LICENSE.md</a></li>
     </ul>
     <h3>Protocol Buffers</h3>
     <ul>
-        <li>Offical site: <a href="https://developers.google.com/protocol-buffers/" target="_blank">developers.google.com/protocol-buffers</a></li>
+        <li>Official site: <a href="https://developers.google.com/protocol-buffers/" target="_blank">developers.google.com/protocol-buffers</a></li>
         <li>Copyright (c) 2008 Google Inc.</li>
         <li>License: <a href="https://github.com/protocolbuffers/protobuf/blob/master/LICENSE" target="_blank">github.com/protocolbuffers/protobuf/blob/master/LICENSE</a></li>
     </ul>
