--- a/liveroom.html
+++ b/liveroom.html
@@ -47,6 +47,13 @@
             <div class="sl-room-list control-panel disabled" id="load-saved-room-list">
                 <span>加载保存的直播列表</span>
             </div>
+<!--            <span class="icon control-panel">-->
+<!--                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 36 36" style="display: block; fill: #fff;" xml:space="preserve">-->
+<!--                    <path class="st0" d="M20,14.5c1.9,1.1,2.6,3.6,1.5,5.5c-0.3,0.6-0.9,1.1-1.5,1.5V14.5z"></path>-->
+<!--                    <path class="st0" d="M21.4,10.7c4,1.9,5.7,6.7,3.8,10.7c-0.8,1.7-2,3-3.7,3.8c-0.5,0.2-1.1,0-1.3-0.5l0,0c-0.2-0.5,0-1.1,0.5-1.3	c2.9-1.5,4.1-4.9,2.7-8c-0.6-1.2-1.6-2.3-2.8-2.8c-0.5-0.2-0.7-0.8-0.5-1.3S20.8,10.5,21.4,10.7C21.3,10.7,21.3,10.7,21.4,10.7	L21.4,10.7z"></path>-->
+<!--                    <path class="st0" d="M17.9,11.7c0.1,0.1,0.1,0.1,0.1,0.2l0.1,12c0,0.3-0.2,0.5-0.5,0.5c-0.1,0-0.2,0-0.3-0.1l-4.2-3.4h-1	c-1.1,0-2-0.9-2-2v-2c0-1.1,0.9-2,2-2h1l4.1-3.3C17.4,11.5,17.7,11.5,17.9,11.7L17.9,11.7z"></path>-->
+<!--                </svg>-->
+<!--            </span>-->
         </div>
         <div class="fullscreen control-panel">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 88 88" width="88" height="88"
@@ -74,7 +81,8 @@
             <div class="panel-title">添加直播</div>
             <div class="room-id-input">
                 <div class="room-input-title">搜索</div>
-                <div class="room-input"><input type="text" placeholder="支持长号，短号，用户名，只有开播的主播会显示在下方结果中。">
+                <div class="room-input"><input type="text"
+                                               placeholder="支持长号，短号，用户名，只有开播的主播会显示在下方结果中。">
                     <div style="overflow: hidden"><span class="error-msg"></span></div>
                 </div>
             </div>
@@ -83,7 +91,7 @@
                 <div class="following-block"></div>
             </div>
             <div class="add-btn-area">
-<!--                <div id="clear-selection">清空选择</div>-->
+                <!--                <div id="clear-selection">清空选择</div>-->
                 <div id="start-all">添加到放映室</div>
             </div>
         </div>
@@ -116,13 +124,13 @@
                         <option value="0">自动</option>
                     </select>
                 </div>
-<!--                <div class="setting-container">-->
-<!--                    <div class="setting-name">-->
-<!--                        <span>重连次数</span>-->
-<!--                        <span>遇到无法加载时的重试次数， 超过次数时将放弃加载。设置值小于0时将会一直尝试加载直到成功加载。<br>但是有些主播下播会直接断开推流不通过b站api下播，这种情况会导致一直重复无意义的加载，不过可以手动关闭直播间。</span>-->
-<!--                    </div>-->
-<!--                    <input type="text" class="quality-chosen" value="10" id="setting-re-try">-->
-<!--                </div>-->
+                <!--                <div class="setting-container">-->
+                <!--                    <div class="setting-name">-->
+                <!--                        <span>重连次数</span>-->
+                <!--                        <span>遇到无法加载时的重试次数， 超过次数时将放弃加载。设置值小于0时将会一直尝试加载直到成功加载。<br>但是有些主播下播会直接断开推流不通过b站api下播，这种情况会导致一直重复无意义的加载，不过可以手动关闭直播间。</span>-->
+                <!--                    </div>-->
+                <!--                    <input type="text" class="quality-chosen" value="10" id="setting-re-try">-->
+                <!--                </div>-->
                 <div class="setting-container">
                     <div class="setting-name">
                         <span>发送心跳包</span>
@@ -134,6 +142,20 @@
                             <label class="button-label"></label>
                         </div>
                     </section>
+                </div>
+                <div class="setting-container">
+                    <div class="setting-name">
+                        <span>自动追帧</span>
+                        <span>定时追帧来减少延迟。</span>
+                    </div>
+                    <select class="quality-chosen" id="setting-auto-frame-chasing">
+                        <option value="0" selected>关闭</option>
+                        <option value="1">1分钟</option>
+                        <option value="5">5分钟</option>
+                        <option value="10">10分钟</option>
+                        <option value="30">30分钟</option>
+                        <option value="60">60分钟</option>
+                    </select>
                 </div>
             </div>
         </div>
