updates for liveroom

--- a/liveroom.html
+++ b/liveroom.html
@@ -157,10 +157,22 @@
                         <option value="60">60分钟</option>
                     </select>
                 </div>
+                <div class="setting-container">
+                    <div class="setting-name">
+                        <span>显示直播间标签</span>
+                        <span>开启后主播的名字会在直播间左上角常驻。</span>
+                    </div>
+                    <section class="button">
+                        <div class="checkbox">
+                            <input type="checkbox" id="setting-name-always-on">
+                            <label class="button-label"></label>
+                        </div>
+                    </section>
+                </div>
             </div>
         </div>
     </div>
 </main>
-<script src="./js/liveroom.min.js"></script>
+<script src="./js/liveroom.js"></script>
 </body>
 </html>
