--- a/popup.html
+++ b/popup.html
@@ -37,7 +37,7 @@
         </a>
     </div>
     <div class="setting-title">主题</div>
-    <div class="host" style="margin: 0 25px;height: 40px;">
+    <div class="host" style="height: 40px;">
         <div class="button-host" id="btn14">
             <span class="tooltip">深色模式
                 <span class="tooltiptext tooltiptext-left">将b站设为深色模式。</span>
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="setting-title">直播相关</div>
-    <div class="host" style="margin: 0 25px;height: 200px;">
+    <div class="host" style="height: 200px;">
         <div class="button-host" id="btn1">
             <span class="tooltip">开播通知
                 <span class="tooltiptext tooltiptext-left">开启后会在关注的主播开播后发送通知</span>
@@ -176,7 +176,7 @@
         </div>
     </div>
     <div class="setting-title">切片录制</div>
-    <div class="host" style="margin: 0 25px;height: 80px;">
+    <div class="host" style="height: 80px;">
         <div class="button-host" id="btn9">
             <span class="tooltip record-manual" style="cursor: pointer;">录制切片
                 <span class="tooltiptext tooltiptext-left record-manual" style="cursor: pointer;">录制直播切片。初次使用时请点此气泡查看使用说明。</span>
@@ -207,7 +207,7 @@
         </div>
     </div>
     <div class="setting-title">主站相关</div>
-    <div class="host" style="margin: 0 25px;height: 80px;">
+    <div class="host" style="height: 80px;">
         <div class="button-host" id="btn5">
             <span class="tooltip">B币兑换
                 <span class="tooltiptext tooltiptext-left">自动兑换大会员的每月5B币</span>
@@ -243,7 +243,7 @@
         </div>
     </div>
     <div class="setting-title">推送通知</div>
-    <div class="host" style="margin: 0 25px;height: 80px;">
+    <div class="host" style="height: 80px;">
         <div class="button-host" id="btn12">
             <span class="tooltip">消息推送
                 <span class="tooltiptext tooltiptext-left tooltiptext-top">开启后在收到回复、赞、@、系统消息、私信时会推送通知。</span>
