--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="current-version" content="5.19">
+    <meta name="current-version" content="5.20">
     <meta name="current-version-mv2" content="5.10.3">
     <title>rua豹器 使用说明</title>
     <link href="./css/readme.min.css" type="text/css" rel="stylesheet">
@@ -27,16 +27,16 @@
     <h1>b站助手rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.19来啦 <br>
+        rua豹器5.20来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
     <h3 style="font-size: 28px" id="new-features">ver 5.19 特性：</h3>
     <ul>
-        <li>放映室界面改进，现在可以一次添加多个直播间了，也可以通过搜索用户名来寻找直播间。</li>
-        <li>添加了放映室对HLS流的支持。</li>
-        <li>适配了新的直播间外观。</li>
-        <li>添加了对API新版安全策略的支持。</li>
+        <li>修复了推送不正常的问题。（应该吧；；）</li>
+        <li>修复了菜单页显示不正常的问题。</li>
+        <li>适配了新版的动态、视频页评论区表情包。</li>
+        <li>放映室加入了自动追帧。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
@@ -202,6 +202,13 @@
 
     <br/>
     <h2 id="version">版本记录</h2>
+    <h3>ver 5.19</h3>
+    <ul>
+        <li>放映室界面改进，现在可以一次添加多个直播间了，也可以通过搜索用户名来寻找直播间。</li>
+        <li>添加了放映室对HLS流的支持。</li>
+        <li>适配了新的直播间外观。</li>
+        <li>添加了对API新版安全策略的支持。</li>
+    </ul>
     <h3>ver 5.18</h3>
     <ul>
         <li>现在可以隐藏视频中的"关注"、"投票"等功能。</li>
