--- a/danmaku.html
+++ b/danmaku.html
@@ -28,6 +28,7 @@
             <div class="control-panel-block-title">背景设置</div>
         </div>
     </div>
-    <script src="./js/danmaku.js"></script>
+    <script src="./js/danmaku_service.min.js"></script>
+    <script src="./js/danmaku.min.js"></script>
 </body>
 </html>
