--- a/liveroom.html
+++ b/liveroom.html
@@ -10,6 +10,7 @@
     <script src="./js/mpegts.min.js"></script>
     <script src="./hls/hls.min.js"></script>
     <script src="./js/crypto-js.min.js"></script>
+    <script src="./js/danmaku_service.min.js"></script>
 </head>
 <body>
 <main>
