--- a/readme.html
+++ b/readme.html
@@ -33,10 +33,12 @@
     </p>
     <h3 style="font-size: 28px" id="new-features">ver 5.19 特性：</h3>
     <ul>
-        <li>修复了推送不正常的问题。（应该吧；；）</li>
-        <li>修复了菜单页显示不正常的问题。</li>
         <li>适配了新版的动态、视频页评论区表情包。</li>
         <li>放映室加入了自动追帧。</li>
+        <li>修复了推送不正常的问题。</li>
+        <li>修复了菜单页显示不正常的问题。</li>
+        <li>修复了放映室添加直播间显示异常的问题。</li>
+        <li>修复了放映室添加直播间时有些已关注主播不显示的问题。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
