--- a/setting.html
+++ b/setting.html
@@ -538,7 +538,7 @@
     <div id="bug-reporter"><a href="https://github.com/TyraelDLee/HarukaEmoji/issues">问题反馈</a></div>
 </div>
 <script src="./js/SVGA.min.js"></script>
-<script src="./js/setting.min.js"></script>
+<script src="./js/setting.js"></script>
 </body>
 </html>
 <!--todo: download setting-->
