--- a/readme.html
+++ b/readme.html
@@ -34,7 +34,8 @@
     <h3 style="font-size: 28px" id="new-features">ver 5.21 特性：</h3>
     <ul>
         <li>设置页加入了有牌子但未关在用户的设置选项。</li>
-        <li>弹幕姬加入了发送弹幕的功能。</li>
+        <li>弹幕姬加入了发送弹幕的功能。已注销账户的直播间也可以去点亮个牌子</li>
+        <li>修复了视频缓存失效的问题。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
