--- a/danmaku.html
+++ b/danmaku.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <script src="./js/danmaku_service.js"></script>
+    <script src="./js/danmaku_service.min.js"></script>
     <script src="./js/danmaku.min.js"></script>
 </body>
 </html>
