--- a/setting.html
+++ b/setting.html
@@ -25,6 +25,48 @@
 <div id="main">
     <div id="setting" class="setting-group">
         <div class="setting-sub-group">
+            <div class="setting-sub-group-title">悬浮球设置</div>
+            <div class="setting-sub-group-item">
+                <div class="item-left-side">
+                    <div class="setting-item-text">
+                        <div class="setting-item-name">禁用悬浮球</div>
+                        <div class="setting-item-description"></div>
+                    </div>
+                </div>
+                <div class="item-right-side">
+                    <div class="setting-item-switch">
+                        <div class="button-host">
+                            <section class="button">
+                                <div class="checkbox">
+                                    <input id="setting-item-popup-disable" type="checkbox">
+                                    <label></label>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="setting-sub-group-item">
+                <div class="item-left-side">
+                    <div class="setting-item-text">
+                        <div class="setting-item-name">悬浮球总在最前</div>
+                        <div class="setting-item-description">关闭后悬浮球不会总保持在页面最前方。</div>
+                    </div>
+                </div>
+                <div class="item-right-side">
+                    <div class="setting-item-switch">
+                        <div class="button-host">
+                            <section class="button">
+                                <div class="checkbox">
+                                    <input id="setting-item-popup-always-on-top" type="checkbox">
+                                    <label></label>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="setting-sub-group-title">直播相关功能</div>
             <div class="setting-sub-group-item">
                 <div class="item-left-side">
