--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="current-version" content="5.20">
+    <meta name="current-version" content="5.21">
     <meta name="current-version-mv2" content="5.10.3">
     <title>rua豹器 使用说明</title>
     <link href="./css/readme.min.css" type="text/css" rel="stylesheet">
@@ -27,15 +27,14 @@
     <h1>b站助手rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.21来啦 <br>
+        rua豹器5.22来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
-    <h3 style="font-size: 28px" id="new-features">ver 5.21 特性：</h3>
+    <h3 style="font-size: 28px" id="new-features">ver 5.22 特性：</h3>
     <ul>
-        <li>设置页加入了有牌子但未关在用户的设置选项。</li>
-        <li>弹幕姬加入了发送弹幕的功能。已注销账户的直播间也可以去点亮个牌子</li>
-        <li>修复了视频缓存失效的问题。</li>
+        <li>设置页加入了悬浮球的设置。</li>
+        <li>修复了API失效的问题。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
