add new features

--- a/danmaku.html
+++ b/danmaku.html
@@ -46,6 +46,22 @@
             <div id="background" class="control-panel-block">
                 <div class="control-panel-block-title">背景设置</div>
             </div>
+            <div id="ban-word-section" class="control-panel-block">
+                <div class="control-panel-block-input">
+                    <div class="control-panel-block-title">屏蔽词设置</div>
+                    <div class="room-input">
+                        <input type="text" placeholder="添加屏蔽词" id="ban-word-value">
+                        <div id="add-ban-word" class="small-button">添加</div>
+                    </div>
+                    <div class="ban-work-display">
+                        <div class="ban-word-item">
+                            <span>Place holder</span>
+                            <div>remove</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 
