--- a/readme.html
+++ b/readme.html
@@ -33,6 +33,7 @@
     </p>
     <h3 style="font-size: 28px" id="new-features">ver 5.22 特性：</h3>
     <ul>
+        <li>放映室加入了奥数（ASMR）模式</li>
         <li>设置页加入了悬浮球的设置。</li>
         <li>修复了API失效的问题。</li>
     </ul>
