--- a/liveroom.html
+++ b/liveroom.html
@@ -48,13 +48,13 @@
             <div class="sl-room-list control-panel disabled" id="load-saved-room-list">
                 <span>加载保存的直播列表</span>
             </div>
-<!--            <span class="icon control-panel">-->
-<!--                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 36 36" style="display: block; fill: #fff;" xml:space="preserve">-->
-<!--                    <path class="st0" d="M20,14.5c1.9,1.1,2.6,3.6,1.5,5.5c-0.3,0.6-0.9,1.1-1.5,1.5V14.5z"></path>-->
-<!--                    <path class="st0" d="M21.4,10.7c4,1.9,5.7,6.7,3.8,10.7c-0.8,1.7-2,3-3.7,3.8c-0.5,0.2-1.1,0-1.3-0.5l0,0c-0.2-0.5,0-1.1,0.5-1.3	c2.9-1.5,4.1-4.9,2.7-8c-0.6-1.2-1.6-2.3-2.8-2.8c-0.5-0.2-0.7-0.8-0.5-1.3S20.8,10.5,21.4,10.7C21.3,10.7,21.3,10.7,21.4,10.7	L21.4,10.7z"></path>-->
-<!--                    <path class="st0" d="M17.9,11.7c0.1,0.1,0.1,0.1,0.1,0.2l0.1,12c0,0.3-0.2,0.5-0.5,0.5c-0.1,0-0.2,0-0.3-0.1l-4.2-3.4h-1	c-1.1,0-2-0.9-2-2v-2c0-1.1,0.9-2,2-2h1l4.1-3.3C17.4,11.5,17.7,11.5,17.9,11.7L17.9,11.7z"></path>-->
-<!--                </svg>-->
-<!--            </span>-->
+            <!--            <span class="icon control-panel">-->
+            <!--                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 36 36" style="display: block; fill: #fff;" xml:space="preserve">-->
+            <!--                    <path class="st0" d="M20,14.5c1.9,1.1,2.6,3.6,1.5,5.5c-0.3,0.6-0.9,1.1-1.5,1.5V14.5z"></path>-->
+            <!--                    <path class="st0" d="M21.4,10.7c4,1.9,5.7,6.7,3.8,10.7c-0.8,1.7-2,3-3.7,3.8c-0.5,0.2-1.1,0-1.3-0.5l0,0c-0.2-0.5,0-1.1,0.5-1.3	c2.9-1.5,4.1-4.9,2.7-8c-0.6-1.2-1.6-2.3-2.8-2.8c-0.5-0.2-0.7-0.8-0.5-1.3S20.8,10.5,21.4,10.7C21.3,10.7,21.3,10.7,21.4,10.7	L21.4,10.7z"></path>-->
+            <!--                    <path class="st0" d="M17.9,11.7c0.1,0.1,0.1,0.1,0.1,0.2l0.1,12c0,0.3-0.2,0.5-0.5,0.5c-0.1,0-0.2,0-0.3-0.1l-4.2-3.4h-1	c-1.1,0-2-0.9-2-2v-2c0-1.1,0.9-2,2-2h1l4.1-3.3C17.4,11.5,17.7,11.5,17.9,11.7L17.9,11.7z"></path>-->
+            <!--                </svg>-->
+            <!--            </span>-->
         </div>
         <div class="fullscreen control-panel">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 88 88" width="88" height="88"
@@ -169,6 +169,39 @@
                             <label class="button-label"></label>
                         </div>
                     </section>
+                </div>
+                <div class="setting-container">
+                    <div class="setting-name">
+                        <span>奥数（ASMR）模式</span>
+                        <span>开启后可指定将直播流标记为奥数直播，直播音量会变为百级调节；</span>
+                        <span>未标记为奥数与新添加的的直播流会被限制音量；</span><span>标记不会被保存，下次启用放映室前请注意音量设置。</span>
+                    </div>
+                    <section class="button">
+                        <div class="checkbox">
+                            <input type="checkbox" id="setting-asmr">
+                            <label class="button-label"></label>
+                        </div>
+                    </section>
+                </div>
+                <div class="setting-container">
+                    <div class="setting-name">
+                        <span>奥数（ASMR）模式音量限制</span>
+                    </div>
+                    <div style="display: flex;">
+                        <input type="range" id="setting-asmr-volume" min="0" max="100" style="">
+                        <label id="setting-name-asmr-volume-label">-</label>
+                    </div>
+                </div>
+                <div class="setting-container" style="display: none">
+                    <div class="setting-name">
+                        <span>奥数（ASMR）模式音量恢复</span>
+                        <span>启用此选项后，奥数模式关闭后直播流恢复至原先设置的音量。</span>
+                        <span>请注意音量设置与听力安全。</span>
+                    </div>
+                    <div style="display: flex;">
+                        <input type="checkbox" id="setting-asmr-restore">
+                        <label class="button-label"></label>
+                    </div>
                 </div>
             </div>
         </div>
