--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="current-version" content="5.21">
+    <meta name="current-version" content="5.22">
     <meta name="current-version-mv2" content="5.10.3">
     <title>rua豹器 使用说明</title>
     <link href="./css/readme.min.css" type="text/css" rel="stylesheet">
@@ -33,10 +33,9 @@
     </p>
     <h3 style="font-size: 28px" id="new-features">ver 5.22 特性：</h3>
     <ul>
-        <li>放映室加入了奥数（ASMR）模式</li>
+        <li>放映室加入了奥数（ASMR）模式。</li>
         <li>设置页加入了悬浮球的设置。</li>
         <li>修复了API失效的问题。</li>
-        <
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
@@ -201,6 +200,12 @@
 
     <br/>
     <h2 id="version">版本记录</h2>
+    <h3>ver 5.21</h3>
+    <ul>
+        <li>设置页加入了有牌子但未关在用户的设置选项。</li>
+        <li>弹幕姬加入了发送弹幕的功能。已注销账户的直播间也可以去点亮个牌子</li>
+        <li>修复了视频缓存失效的问题。</li>
+    </ul>
     <h3>ver 5.20</h3>
     <ul>
         <li>适配了新版的动态、视频页评论区表情包。</li>
