--- a/readme.html
+++ b/readme.html
@@ -27,15 +27,14 @@
     <h1>b站助手rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.22来啦 <br>
+        rua豹器5.23来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
-    <h3 style="font-size: 28px" id="new-features">ver 5.22 特性：</h3>
+    <h3 style="font-size: 28px" id="new-features">ver 5.23 特性：</h3>
     <ul>
-        <li>放映室加入了奥数（ASMR）模式。</li>
-        <li>设置页加入了悬浮球的设置。</li>
-        <li>修复了API失效的问题。</li>
+
+        <li>修复了某些情况下放映室列表显示无法正常显示的问题。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
     <ul>
@@ -200,6 +199,12 @@
 
     <br/>
     <h2 id="version">版本记录</h2>
+    <h3>ver 5.22</h3>
+    <ul>
+        <li>放映室加入了奥数（ASMR）模式。</li>
+        <li>设置页加入了悬浮球的设置。</li>
+        <li>修复了API失效的问题。</li>
+    </ul>
     <h3>ver 5.21</h3>
     <ul>
         <li>设置页加入了有牌子但未关在用户的设置选项。</li>
