add like function

--- a/setting.html
+++ b/setting.html
@@ -246,7 +246,7 @@
                 <div class="item-left-side">
                     <div class="setting-item-text">
                         <div class="setting-item-name">挂机</div>
-                        <div class="setting-item-description">开启后会在有牌子的主播开播是开始挂机，每天1500亲密度到手！可在"更多设置"中指定挂机的直播间。</div>
+                        <div class="setting-item-description">开启后会在有牌子的主播开播时开始挂机，每天1500亲密度到手！可在"更多设置"中指定挂机的直播间。</div>
                     </div>
                 </div>
                 <div class="item-right-side">
@@ -255,6 +255,26 @@
                             <section class="button">
                                 <div class="checkbox">
                                     <input id="setting-item-switch-heartbeat" type="checkbox">
+                                    <label></label>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="setting-sub-group-item">
+                <div class="item-left-side">
+                    <div class="setting-item-text">
+                        <div class="setting-item-name">自动点赞</div>
+                        <div class="setting-item-description">开启后会在有牌子的主播开播时点赞30次点亮牌子</div>
+                    </div>
+                </div>
+                <div class="item-right-side">
+                    <div class="setting-item-switch">
+                        <div class="button-host">
+                            <section class="button">
+                                <div class="checkbox">
+                                    <input id="setting-item-switch-zan" type="checkbox">
                                     <label></label>
                                 </div>
                             </section>
