--- a/readme.html
+++ b/readme.html
@@ -33,7 +33,8 @@
     </p>
     <h3 style="font-size: 28px" id="new-features">ver 5.23 特性：</h3>
     <ul>
-
+        <li>添加了开播自动点赞点亮牌子的相关功能。自动打卡现已默认关闭，之前开启的也可以在设置中关闭。</li>
+        <li>修复了设置页显示不正常的问题。</li>
         <li>修复了某些情况下放映室列表显示无法正常显示的问题。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
